@@ -200,7 +200,7 @@ sub add_interests {
     $interested[$tag] = 'y'
       if ($tag == TAG_INPUT      and $self -> input_handler)
       or ($tag == TAG_OUTPUT     and ($self -> output_handler or $self -> echo_handler)) # echo is the first OUTPUT after INPUT
-      or ($tag == TAG_HISTORY    and $self -> history_handler or $self -> echo_handler)) # to determine which OUTPUT is echo, we need to see INPUT
+      or ($tag == TAG_HISTORY    and ($self -> history_handler or $self -> echo_handler)) # to determine which OUTPUT is echo, we need to see INPUT
       or ($tag == TAG_COMPLETION and $self -> completion_handler)
       or ($tag == TAG_PROMPT     and $self -> prompt_handler)
       or ($tag == TAG_HOTKEY     and $self -> hotkey_handler)
